# flyte-mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  deploy.yaml.example  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: mcp_server.py
scripts/: clear_flyte_keyring.py  inspect_mcp_registry.py
src/flyte_mcp/: app.py  discovery.py  models.py  runtime.py  server.py  settings.py
src/flyte_mcp/tools/: __init__.py  runs.py  tasks.py
tests/integration/: test_all_types_healthcheck.py  test_mcp_stdio.py
tests/unit/: test_discovery.py  test_runtime.py  test_server_core.py  test_settings.py
tests/unit/tools/: test_runs.py  test_tasks.py
