[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "wherobots-flyte-mcp"
version = "0.1.0"
description = "Dynamic MCP server that discovers Flyte tasks and exposes them as tools."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "flyte>=2.0.3,<2.1",
  "mcp[cli]>=1.6",
  "numpy>=2.4.3",
  "pydantic>=2,<3",
  "starlette>=0.37",
  "uvicorn>=0.30",
]

[dependency-groups]
dev = [
  "geopandas>=1.1.3",
  "pandas>=3.0.1",
  "pre-commit>=4.3",
  "pyarrow>=23.0.1",
  "pytest>=8.3.5",
  "pytest-cov>=6",
  "ruff>=0.9.9",
]

[tool.hatch.build.targets.sdist]
packages = [ "src/flyte_mcp" ]

[tool.hatch.build.targets.wheel]
packages = [ "src/flyte_mcp" ]

[tool.pytest.ini_options]
testpaths = [ "tests" ]
markers = [
  "integration: Integration tests that require a working local Flyte config.",
]

[tool.mypy]
plugins = [ "pydantic.mypy" ]

[tool.semantic_release]
version_toml = [ "pyproject.toml:project.version:nf" ]
version_variables = [ "src/flyte_mcp/__init__.py:__version__" ]

build_command = """
curl -LsSf https://astral.sh/uv/install.sh | sh && \
export PATH=$HOME/.local/bin:$PATH && \
uv lock && \
git add uv.lock
"""

[tool.semantic_release.branches.main]
match = "main"

[tool.numpydoc_validation]
# See https://numpydoc.readthedocs.io/en/latest/validation.html#built-in-validation-checks for list of checks
checks = [
  "GL06",
  "GL07",
  # Currently broken; see https://github.com/numpy/numpydoc/issues/573
  # "GL09",
  "GL10",
  "SS01",
  "SS02",
  "SS03",
  "SS04",
  "PR01",
  "PR02",
  "PR03",
  "PR04",
  "PR05",
  "PR06",
  "RT01",
  "RT02",
  "RT03",
]
ignore = [ "GL08" ]
exclude_files = [ "^tests/.*" ]
